Implemented PUT and PATCH for both task and tag
