# src/main/java/dev/efullstack/todo/routers/TodoRouters.java
@@ -22,12 +22,14 @@ public class TodoRouters {
                         .POST("/tasks", todoHandler::createTask)
                         .GET("/tasks/{taskId}", todoHandler::findTaskById)
                         .GET("/tasks", todoHandler::tasks)
-                        .PATCH("/tasks/{taskId}", todoHandler::updateTask)
+                        .PUT("/tasks/{taskId}", todoHandler::updateTask)
+                        .PATCH("/tasks/{taskId}", todoHandler::patchTask)
                         .DELETE("/tasks/{taskId}", todoHandler::deleteTask)
                         .POST("/tags", todoHandler::newTags)
                         .GET("/tags/{tagId}", todoHandler::tagById)
                         .GET("/tags/{tagId}/tasks", todoHandler::tasksByTagId)
-                        .PATCH("/tags/{tagId}", todoHandler::updateTag)
+                        .PUT("/tags/{tagId}",todoHandler::updateTag)
+                        .PATCH("/tags/{tagId}", todoHandler::patchTag)
                         .GET("/tags", todoHandler::tags)
                         .DELETE("/tags/{tagId}", request -> ServerResponse.noContent().build())
                 )
